java 22 + general code improvements + update dependencies