@@ -4,6 +4,8 @@ import java.io.BufferedInputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.net.URLConnection;
 
@@ -16,16 +18,14 @@ import org.apache.logging.log4j.Logger;
 class WebMp3Sound extends AbstractSound {
 	private static final Logger LOGGER = LogManager.getLogger(WebMp3Sound.class);
 
-
 	public WebMp3Sound(SoundSourceType type, int index, String url, int delayMillis) {
 		super(type, index, url, delayMillis);
 	}
 
-	
 	private URL getUrl() {
 		try {
-			return new URL(getSource());
-		} catch (MalformedURLException e) {
+			return new URI(getSource()).toURL();
+		} catch (MalformedURLException | URISyntaxException e) {
 			LOGGER.error(e);
 			return null;
 		}
@@ -37,9 +37,8 @@ class WebMp3Sound extends AbstractSound {
 			URL urlImpl = getUrl();
 			URLConnection connection = urlImpl.openConnection();
 			connection.setConnectTimeout(2000);
-			connection.getInputStream();
-			return new BufferedInputStream(urlImpl.openStream());
-		} catch (IOException e) {
+			return new BufferedInputStream(connection.getInputStream());
+		} catch (IOException | NullPointerException e) {
 			LOGGER.error(e);
 			throw new RuntimeException(e);
 		}
